--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,7 @@ dependencies {
     implementation("androidx.navigation:navigation-compose:2.4.0-alpha05")
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
+    //Mobile ads SDK
+    implementation 'com.google.android.gms:play-services-ads:20.3.0'
+
 }
