--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,22 +5,21 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.ignation.cartoonshards"
         minSdkVersion 22
-        targetSdkVersion 30
-        versionCode 3
-        versionName "3.0"
+        targetSdkVersion 31
+        versionCode 4
+        versionName "4.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildFeatures {
-        viewBinding = true
+        viewBinding true
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -35,19 +34,14 @@ android {
         jvmTarget = '1.8'
     }
 
-    buildFeatures {
-        viewBinding = true
-    }
 }
 
 dependencies {
-    def nav_version = "2.3.5"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -63,8 +57,8 @@ dependencies {
     // Testing Navigation
     androidTestImplementation("androidx.navigation:navigation-testing:$nav_version")
 
-    // Jetpack Compose Integration
-    implementation("androidx.navigation:navigation-compose:2.4.0-alpha05")
+    // Jetpack Integration
+    implementation("androidx.navigation:navigation-compose:2.4.0-beta01")
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     //Mobile ads SDK
